- Resolve resource path issue for container platform